src/assets/styles/_home.scss
#home .main {
  height: 100vh;
  @include respond-to('small') {
    overflow: hidden;
  }
}

.main-home {
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-direction: column;
  .social-icons {
    position: absolute;
    top: 30%;
    display: flex;
    justify-content: space-around;
    align-items: center;
    z-index: 5;
    @include respond-to('small') {
      top: 30px;
    }
    a {
      color: white;
      text-decoration: none;
      font-family: 'Apoc Light';
      font-size: 25px;
      &:hover {
        text-decoration: underline;
        text-decoration-thickness: 3px;
      }
      &:first-child {
        margin-right: 15px;
      }
    }
  }
  .home-logo {
    position: absolute;
    top: 30%;
    width: 100%;
    @include respond-to('small') {
      height: 100%;
      width: unset;
      position: unset;
    }
  }
}

footer {
  position: absolute;
  bottom: 30%;
  display: flex;
  align-items: center;
  justify-content: center;
  z-index: 5;
  @include respond-to('small') {
    bottom: 30px;
  }
  a {
    text-decoration: none;
    font-size: 25px;
    font-family: 'Apoc Light';
    color: white;
    &:hover {
      text-decoration: underline;
      text-decoration-thickness: 3px;
    }
     &:first-child {
      margin-right: 15px;
    }
  }
}

